test/files/neg/patmatexhaust.check
patmatexhaust.scala:8: warning: match may not be exhaustive.
It would fail on the following input: Baz
    def ma1(x:Foo) = x match {
                     ^
patmatexhaust.scala:12: warning: match may not be exhaustive.
It would fail on the following input: Bar(_)
    def ma2(x:Foo) = x match {
                     ^
patmatexhaust.scala:24: warning: match may not be exhaustive.
It would fail on the following inputs: (Kult(_), Kult(_)), (Qult(), Qult())
    def ma3(x:Mult) = (x,x) match { // not exhaustive
                      ^
patmatexhaust.scala:50: warning: match may not be exhaustive.
It would fail on the following inputs: Gp(), Gu
    def ma4(x:Deep) = x match { // missing cases: Gu, Gp which is not abstract so must be included
                      ^
patmatexhaust.scala:56: warning: unreachable code
      case _ if 1 == 0 =>
                       ^
patmatexhaust.scala:54: warning: match may not be exhaustive.
It would fail on the following input: Gp()
    def ma5(x:Deep) = x match {
                      ^
patmatexhaust.scala:76: warning: match may not be exhaustive.
It would fail on the following input: B()
  def ma9(x: B) = x match {
                  ^
patmatexhaust.scala:101: warning: match may not be exhaustive.
It would fail on the following input: C1()
    def ma10(x: C) = x match { // not exhaustive: C1 is not sealed.
                     ^
patmatexhaust.scala:115: warning: match may not be exhaustive.
It would fail on the following inputs: D1, D2()
    def ma10(x: C) = x match {  // not exhaustive: C1 has subclasses.
                     ^
patmatexhaust.scala:127: warning: match may not be exhaustive.
It would fail on the following input: C1()
    def ma10(x: C) = x match { // not exhaustive: C1 is not abstract.
                     ^
error: No warnings can be incurred under -Xfatal-warnings.
10 warnings found
one error found
